src/test/ui/imports/issue-53512.stderr
error[E0432]: unresolved import `std::assert`
  --> $DIR/issue-53512.rs:3:5
   |
LL | use std::assert;
   |     ^^^^^^^^^^^ no `assert` in the root

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
